# google-cloud-add-bindings

./: .cursorrules  .gitignore  README.md  add_bindings.py  asset_types_config.yaml  iam_binding_utils.py  pyproject.toml  requirements.txt  run_tests.sh  sample_input.csv  setup_dev_env.sh  test_add_bindings.py  test_iam_binding_utils.py
.github/workflows/: python-ci.yml
google_cloud_add_bindings/cli/: __init__.py  add_bindings.py
google_cloud_add_bindings/core/: __init__.py  iam_binding_utils.py
tests/unit/: test_add_bindings.py  test_iam_binding_utils.py
