[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "google-cloud-add-bindings"
version = "0.1.0"
description = "IAMユーザーに対してロールを付与するためのツール"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-cloud-iam>=2.12.1",
    "pandas>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.11.1",
    "pytest-cov>=4.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "safety>=2.0.0",
    "ruff>=0.0.70",
]

[project.scripts]
google-cloud-add-bindings = "google_cloud_add_bindings.cli.add_bindings:main"

[tool.hatch.build.targets.wheel]
packages = ["google_cloud_add_bindings"]

[tool.uv]
pip = {}

[tool.isort]
# Blackプロファイルの代わりに直接設定する
# profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [".git", ".hg", ".mypy_cache", ".tox", ".venv", "_build", "buck-out", "build", "dist"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["google.*", "pandas.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"

[tool.ruff]
target-version = "py38"
line-length = 100
select = ["E", "F", "B", "I", "N", "YTT", "S", "BLE", "FBT", "A", "C4", "T10", "ICN", "PIE", "PT", "SIM", "RET"]
ignore = []
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.coverage.run]
source = ["google_cloud_add_bindings"]
omit = ["tests/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
